--- a/css/header.css
+++ b/css/header.css
@@ -8,8 +8,10 @@
 }
 
 .header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 20px;
-    text-align: center;
 }
 
 .logo {
@@ -21,19 +23,17 @@
 
 .header-nav {
     display: flex;
-    justify-content: center;
     gap: 20px;
-    background-color: #111;
-    padding: 10px 0;
 }
 
     .header-nav a {
-        color: #fff;
+        color: #aaa;
         text-decoration: none;
         font-weight: bold;
-        transition: color 0.3s;
+        transition: color 0.3s, text-shadow 0.3s;
     }
 
         .header-nav a:hover {
-            color: #ddd;
+            color: #fff;
+            text-shadow: 2px 2px 10px #fff;
         }
