--- a/LandingPage.css
+++ b/LandingPage.css
@@ -10,6 +10,10 @@ body {
     color: #000;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Lusitana', serif;
+}
+
 .landing-page {
     display: flex;
     flex-direction: column;
@@ -46,6 +50,10 @@ body {
 .text-content {
     max-width: 600px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
     .text-content h2 {
@@ -59,6 +67,7 @@ body {
     }
 
 .play-button {
+    display: inline-block;
     background-color: #005edb;
     color: #fff;
     font-size: 1.2rem;
@@ -71,6 +80,8 @@ body {
     transition: background-color 0.3s;
     width: auto;
     max-width: 250px;
+    text-align: center;
+    white-space: nowrap;
 }
 
     .play-button:hover {
@@ -83,6 +94,7 @@ body {
     text-align: center;
     padding: 20px;
 }
+
 .game-section {
     display: flex;
     flex-direction: column;
@@ -95,6 +107,7 @@ body {
     max-width: 100%;
     height: auto;
     object-fit: contain;
+    transform: scale(0.5);
 }
 
 .game-info {
@@ -126,9 +139,7 @@ body {
 
     .text-content {
         flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        max-width: 50%;
         text-align: left;
     }
 
@@ -136,41 +147,9 @@ body {
         max-width: 30%;
     }
 
-    .text-content {
-        max-width: 600px;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-
     .text-content p {
         font-size: 1.1rem;
     }
-
-    .play-button {
-        display: inline-block;
-        background-color: #005edb;
-        color: #fff;
-        font-size: 1.2rem;
-        font-weight: bold;
-        border: none;
-        border-radius: 33px;
-        padding: 15px 40px;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
-        cursor: pointer;
-        transition: background-color 0.3s;
-        width: auto;
-        max-width: 250px;
-        text-align: center;
-        white-space: nowrap;
-    }
-
-        .play-button:hover {
-            background-color: #0044aa;
-        }
 
     .game-section {
         flex-direction: row;
@@ -179,8 +158,13 @@ body {
         gap: 40px;
     }
 
+    .game-screenshot,
+    .game-info {
+        flex: 1;
+        max-width: 50%;
+    }
+
     .game-info {
         text-align: left;
     }
-
 }
