--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
     top: 0;
     width: 100%;
     z-index: 100;
+    padding: 0 20px;
 }
 
 .header-top {
@@ -37,3 +38,9 @@
             color: #fff;
             text-shadow: 2px 2px 10px #fff;
         }
+
+@media (min-width: 1024px) {
+    .fixed-header {
+        padding: 0 80px;
+    }
+}
