--- a/css/header.css
+++ b/css/header.css
@@ -5,14 +5,21 @@
     top: 0;
     width: 100%;
     z-index: 100;
-    padding: 0 20px;
 }
 
 .header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1200px; /* або скільки хочеш */
+    margin: 0 auto;
     padding: 20px;
+}
+
+@media (min-width: 1024px) {
+    .header-top {
+        padding: 20px 80px;
+    }
 }
 
 .logo {
@@ -38,9 +45,3 @@
             color: #fff;
             text-shadow: 2px 2px 10px #fff;
         }
-
-@media (min-width: 1024px) {
-    .fixed-header {
-        padding: 0 80px;
-    }
-}
