--- a/LandingPage.css
+++ b/LandingPage.css
@@ -8,11 +8,16 @@ body {
     font-family: Helvetica, sans-serif;
     background-color: #f3f3f3;
     color: #000;
+}
+
+.page-inner {
     padding: 0 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 @media (min-width: 1024px) {
-    body {
+    .page-inner {
         padding: 0 80px;
     }
 }
@@ -135,16 +140,16 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #000;
     color: #fff;
     text-align: center;
-    padding: 20px 20px;
 }
 
 .footer-inner {
+    padding: 20px 20px;
     max-width: 1200px;
     margin: 0 auto;
 }
 
 @media (min-width: 1024px) {
-    .footer {
+    .footer-inner {
         padding: 20px 80px;
     }
 }
