--- a/LandingPage.css
+++ b/LandingPage.css
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
 .footer {
-    background-color: #2e103f;
+    background-color: #000;
     color: #fff;
     text-align: center;
 }
