--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .fixed-header {
-    background-color: #2e103f;
-    color: #2e103f;
+    background-color: #000000;
+    color: #000000;
     position: fixed;
     top: 0;
     width: 100%;
@@ -35,7 +35,7 @@
 }
 
     .header-nav a {
-        color: #f6dbff;
+        color: #808080;
         text-decoration: none;
         font-weight: bold;
         transition: color 0.3s, text-shadow 0.3s;
